Fix content overflow issue in comments sections

--- a/src/_sass/components/comments.scss
+++ b/src/_sass/components/comments.scss
@@ -83,6 +83,7 @@ $meta-spacing: 0.8rem;
 
 .comment-body {
   @include rhythm;
+  grid-template-columns: minmax(0, 1fr);
 
   pre {
     white-space: pre-wrap;
